--- a/page-top50cr.html
+++ b/page-top50cr.html
@@ -4,6 +4,7 @@
 #SET{#REF,#NOM}
 <h1><a href="spip.php?page=top50&dep=#ENV{dep}">Top 50</a> - #NOM - Rapide</h1>
 Ville : #COMMUNE - Voir le classement pour l'<a href="spip.php?page=top50c&club=#ENV{club}&dep=#ENV{dep}"><b>Elo lent</b></a>
+ / <a href="spip.php?page=top50r&dep=#ENV{dep}">tous les clubs</a>
 </BOUCLE_club>
 <hr>
 
